<resources>
    <string name="app_name">OctoDroid</string>
    <string name="introduction">To be able to use the app to its full potential, please log in to GitHub using the button below.\n\nAlternatively, you can explore some parts of GitHub using the swipe-out menu on the left.</string>
    <string name="repo_not_found_toast">Repository was not found</string>
    <string name="loading_msg">Loading\u2026</string>
    <string name="saving_msg">Saving\u2026</string>
    <string name="deleting_msg">Deleting\u2026</string>
    <string name="closing_msg">Closing\u2026</string>
    <string name="opening_msg">Opening\u2026</string>
    <string name="merging_msg">Merging\u2026</string>
    <string name="reviewing_msg">Adding Review\u2026</string>
    <string name="authenticating">Authenticating\u2026</string>
    <string name="search">Search</string>
    <string name="search_code">Search code</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="login_oauth">Login via OAuth</string>
    <string name="login_token">Login using access token</string>
    <string name="login_summary_oauth">Log in to Github using the OAuth web login flow.\nAs the login process is done in your browser and only one account can be active at a time there, you need to make sure to be logged out from Github in your browser before being able to log in to a new account.\n\nPlease visit <a href="https://github.com/logout">Github\'s logout page</a>, finish the logout process, then close the browser window, come back to the app and continue the login process.\nIf you\'re sure you\'re not logged in, you can also continue to the login process right away.</string>
    <string name="credentials_error_empty">This field must not be empty.</string>
    <string name="credentials_error_invalid_token">The entered text does not look like a valid access token.</string>
    <string name="credentials_token">Access token</string>
    <string name="try_again">Try again</string>
    <string name="report_issue">Report issue</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="retry">Retry</string>
    <string name="open_source_components">Open source components</string>
    <string name="my_profile">My profile</string>
    <string name="user_context">Account</string>
    <string name="add_account">Add account</string>
    <string name="my_email">slapperwan@gmail.com</string>
    <string name="my_web">http://slapperwan.github.com/gh4a</string>
    <string name="my_username">slapperwan</string>
    <string name="my_repo">gh4a</string>
    <string name="source_code">Source Code</string>
    <string name="feedback_text">If you have any issues or suggestions, please contact me.  Any kind of feedback is greatly appreciated.</string>
    <string name="feedback_by_email">By Email</string>
    <string name="feedback_by_gh4a">By OctoDroid</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmarks_and_stars">Bookmarks and Stars</string>
    <string name="other_info">Other Information</string>
    <string name="view">View</string>
    <string name="readme">Readme</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="reply">Reply</string>
    <string name="reply_selected">Reply (Selected)</string>
    <string name="add_comment">Add comment</string>
    <string name="add_reaction">Add reaction</string>
    <string name="remove_reaction">Remove reaction</string>
    <string name="add_reaction_error">Adding reaction failed</string>
    <string name="remove_reaction_error">Removing reaction failed</string>
    <string name="edit">Edit</string>
    <string name="members">Members</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="merged">Merged</string>
    <string name="draft">Draft</string>
    <string name="theme">Theme</string>
    <string name="pub_timeline">Public Timeline</string>
    <string name="load_failure_explanation">Loading the data from GitHub failed. Please verify you have a working network connection and try again.</string>
    <string name="load_failure_explanation_dmca">This repository was taken down for legal reasons.\nPlease see %1$s for details.</string>
    <string name="load_failure_explanation_parsing">There was an error while parsing GitHub\'s response. You can use the button below to report this issue to the app developers.</string>
    <string name="load_failure_explanation_with_reason">Loading the data from GitHub failed. GitHub told us the following reason:\n%1$s</string>
    <string name="snackbar_network_error">%1$s. Please check your internet connection.</string>
    <string name="snackbar_application_error">%1$s. You can copy the error log to provide more details when reporting the issue to the app developers.</string>
    <string name="snackbar_github_api_error">%1$s: %2$s</string>
    <string name="snackbar_copy_error_msg_action">Copy error message</string>
    <string name="snackbar_copy_error_log_action">Copy error log</string>
    <string name="issue_reported">The issue has been reported. Thank you!</string>
    <string name="find_next">Find next</string>
    <string name="find_previous">Find previous</string>
    <string name="share">Share</string>
    <string name="print">Print</string>
    <string name="downloads">Downloads</string>
    <string name="releases">Releases</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="no_browser_found">The link could not be opened: no browser was found on your device</string>
    <string name="link_copied">Link copied</string>
    <string name="wrap_lines">Wrap lines</string>
    <string name="follow_renames">Follow renames</string>
    <string name="unknown">unknown</string>
    <string name="history">History</string>
    <string name="download">Download</string>
    <string name="deleted">(deleted)</string>
    <string name="go_to">Go to</string>
    <string name="forked_from">Forked from %1$s</string>
    <string name="menu_user">User %1$s</string>
    <string name="menu_repo">Repo %1$s</string>
    <string name="menu_compare">Compare %1$s</string>
    <string name="menu_commit">Commit %1$s</string>
    <string name="menu_issue">Issue %1$d</string>
    <string name="menu_gist">Gist %1$s</string>
    <string name="menu_file">File %1$s</string>
    <string name="menu_fork">Forked repo %1$s</string>
    <string name="menu_wiki">Wiki in browser</string>
    <string name="menu_pull">Pull request %1$d</string>
    <string name="menu_issues">Open issues</string>
    <string name="menu_pulls">Open pull requests</string>
    <string name="delete_comment_message">Delete this comment?</string>
    <string name="saving_comment">Saving comment\u2026</string>
    <string name="ellipse" translatable="false">\u2026</string>
    <string name="view_more">View more\u2026</string>
    <string name="view_video">View video</string>
    <string name="pulls">Pulls</string>
    <string name="issue_milestone_hint">Milestone</string>
    <string name="issue_assignee_hint">Assignees</string>
    <string name="link_not_openable">Link could not be opened</string>
    <string name="download_created">Created %1$s</string>
    <string name="download_mobile_warning_title">Mobile connection download</string>
    <string name="download_mobile_warning_message">Do you want to download this file using your mobile connection?\nYou can also schedule it for download when you\'re using your Wi-Fi connection next time.</string>
    <string name="download_now_button">Download now</string>
    <string name="download_wifi_button">Download over Wi-Fi</string>
    <string name="download_permission_rationale">Permission to write to USB storage or SD card is required in order to download files.</string>
    <string name="load_auth_failure_notice">Your authentication credentials aren\'t valid anymore, please log in again.</string>
    <string name="unset">Unset</string>
    <string name="copyright_notice">\u00a9 2014 Azwan Adli, Danny Baumann</string>
    <string name="actions">Actions</string>
    <string name="created">Created</string>
    <string name="assigned">Assigned</string>
    <string name="mentioned">Mentioned</string>
    <string name="participating">Participating</string>
    <string name="my_repositories">My repositories</string>
    <string name="my_issues">My issues</string>
    <string name="my_pull_requests">My pull requests</string>
    <string name="my_gists">My gists</string>
    <string name="start_page">Start page</string>
    <string name="start_page_last_selected">Last selected</string>
    <string name="comment_editor_locked_hint">Comments are only available to collaborators</string>
    <string name="user_type_bot">Bot</string>
    <string name="user_type_mannequin">Mannequin</string>
    <string name="user_type_org">Organization</string>
    <string name="clear_suggestions">Clear suggestions</string>
    <string name="quote">Quote</string>
    <string name="fork">Fork</string>
    <string name="notifications">Notifications</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="unsubscribe_success">Unsubscribed from the conversation</string>
    <string name="mark_repository_as_read_question">Mark all notifications from %1$s as read?</string>
    <string name="mark_all_as_read_question">Mark all notifications as read?</string>
    <string name="unread">Unread</string>
    <string name="undo">Undo</string>
    <string name="raw">Raw</string>
    <string name="reaction_plus_one" translatable="false">+1</string>
    <string name="reaction_minus_one" translatable="false">-1</string>
    <string name="reaction_laugh">Laugh</string>
    <string name="reaction_confused">Confused</string>
    <string name="reaction_heart">Heart</string>
    <string name="reaction_hooray">Hooray</string>
    <string name="reaction_rocket">Rocket</string>
    <string name="reaction_eyes">Eyes</string>
    <string name="repo_type_all">All</string>
    <string name="repo_type_owner">Owner</string>
    <string name="repo_type_member">Member</string>
    <string name="repo_type_sources">Sources</string>
    <string name="repo_type_forks">Forks</string>
    <string name="repo_type_watched">Watched</string>
    <string name="repo_type_starred">Starred</string>
    <string name="repo_filter">Filter</string>
    <string name="repo_sort">Sort order</string>
    <string name="repo_sort_order_creation_desc">Newest</string>
    <string name="repo_sort_order_creation_asc">Oldest</string>
    <string name="repo_sort_order_pushed_desc">Most recently pushed</string>
    <string name="repo_sort_order_pushed_asc">Least recently pushed</string>
    <string name="user_news_feed">News Feed</string>
    <string name="repo_select_ref">Select branch</string>
    <string name="repo_download_action">Download code as ZIP</string>
    <string name="issue_labels">Labels</string>
    <string name="issue_filter">Filter</string>
    <string name="issue_filter_remove">Remove filter</string>
    <string name="pull_merge_title_description">Merge commit title</string>
    <string name="pull_merge_title_helper">Leave this empty to use the default title provided by GitHub.</string>
    <string name="pull_merge_message_description">Merge commit details</string>
    <string name="pull_merge_method">Merge method</string>
    <string name="trend">Trending Repos</string>
    <string name="blog">GitHub Blog</string>
    <string name="bookmark">Bookmark</string>
    <string name="menu_text_size">Code view text size</string>
    <string name="menu_gif_load_mode">Animated GIF loading</string>
    <string name="notification_interval">Sync interval</string>
</resources>