<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/repo_filter">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/filter_type_all"
                    android:title="@string/repo_type_all" />
                <item
                    android:id="@+id/filter_type_owner"
                    android:title="@string/repo_type_owner" />
                <item
                    android:id="@+id/filter_type_member"
                    android:title="@string/repo_type_member" />
                <item
                    android:id="@+id/filter_type_sources"
                    android:title="@string/repo_type_sources" />
                <item
                    android:id="@+id/filter_type_forks"
                    android:title="@string/repo_type_forks" />
                <item
                    android:id="@+id/filter_type_watched"
                    android:title="@string/repo_type_watched" />
                <item
                    android:id="@+id/filter_type_starred"
                    android:title="@string/repo_type_starred" />
            </group>
        </menu>
    </item>
</menu>