<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/ref"
        android:title="@string/repo_select_ref"
        android:icon="@drawable/branch_dark"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/share"
        android:title="@string/share"
        android:icon="@drawable/social_share"
        app:showAsAction="never" />
    <item android:id="@+id/browser"
        android:title="@string/open_in_browser"
        android:icon="@drawable/web_site"
        app:showAsAction="never" />
    <item android:id="@+id/search"
        android:title="@string/search_code"
        android:icon="@drawable/action_search"
        app:showAsAction="never"/>
    <item android:id="@+id/zip_download"
        android:title="@string/repo_download_action"
        app:showAsAction="never" />
    <item android:id="@+id/bookmark"
        android:title="@string/bookmark"
        app:showAsAction="never" />
</menu>
