<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/repo_sort">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_created_asc"
                    android:title="@string/repo_sort_order_creation_asc" />
                <item
                    android:id="@+id/sort_created_desc"
                    android:title="@string/repo_sort_order_creation_desc" />
                <item
                    android:id="@+id/sort_updated_asc"
                    android:title="@string/repo_sort_order_pushed_asc" />
                <item
                    android:id="@+id/sort_updated_desc"
                    android:title="@string/repo_sort_order_pushed_desc" />
            </group>
        </menu>
    </item>
</menu>