<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.gh4a.widget.IntegerListPreference
        android:defaultValue="1"
        android:entries="@array/theme_items"
        android:entryValues="@array/theme_values"
        android:key="theme"
        android:summary="%s"
        android:title="@string/theme" />

    <ListPreference
        android:defaultValue="newsfeed"
        android:entries="@array/start_page_items"
        android:entryValues="@array/start_page_values"
        android:key="start_page"
        android:summary="%s"
        android:title="@string/start_page" />

    <com.gh4a.widget.IntegerListPreference
        android:defaultValue="2"
        android:entries="@array/text_size_items"
        android:entryValues="@array/text_size_values"
        android:key="webview_initial_zoom"
        android:summary="%s"
        android:title="@string/menu_text_size" />

    <com.gh4a.widget.IntegerListPreference
        android:defaultValue="1"
        android:entries="@array/load_gif_mode_items"
        android:entryValues="@array/load_gif_mode_values"
        android:key="http_gif_load_mode"
        android:summary="%s"
        android:title="@string/menu_gif_load_mode" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="notifications"
        android:title="@string/notifications" />

    <com.gh4a.widget.IntegerListPreference
        android:defaultValue="15"
        android:dependency="notifications"
        android:entries="@array/notification_interval_items"
        android:entryValues="@array/notification_interval_values"
        android:key="notification_interval"
        android:summary="%s"
        android:title="@string/notification_interval" />

    <Preference
        android:key="about"
        android:title="@string/about" />

    <Preference
        android:key="open_source_components"
        android:title="@string/open_source_components" />

</PreferenceScreen>
