<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/browser"
        android:icon="@drawable/web_site"
        android:title="@string/open_in_browser"
        app:showAsAction="always" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/action_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/share"
        android:icon="@drawable/social_share"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/wrap"
        android:checkable="true"
        android:title="@string/wrap_lines"
        app:showAsAction="never" />
    <item
        android:id="@+id/view_raw"
        android:title="@string/raw"
        android:checkable="true"
        app:showAsAction="never" />
</menu>
