<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.gh4a.widget.LinkHandlingTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:text="@string/pull_merge_method" />

        <Spinner
            android:id="@+id/merge_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pull_merge_title_description"
            app:helperText="@string/pull_merge_title_helper">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:layout_marginStart="-8dp"
                android:background="@android:color/transparent"
                android:inputType="textCapSentences" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/details_field"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pull_merge_message_description">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-8dp"
                android:inputType="textMultiLine|textCapSentences"
                android:background="@android:color/transparent"
                android:maxLines="5" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>

