<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout_height="match_parent"
    tools:layout_width="match_parent"
    tools:parentTag="FrameLayout">

    <com.gordonwong.materialsheetfab.DimOverlayFrameLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/fab_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:elevation="16dp"
        app:cardElevation="16dp"
        app:layout_anchor="@id/header"
        app:layout_anchorGravity="right|bottom"
        tools:targetApi="lollipop">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="160dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/edit_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/edit"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/edit_labels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/issue_labels"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/edit_assignees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/issue_assignee_hint"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/edit_milestone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/issue_milestone_hint"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</merge>